# plantastic

./: .doppler.yaml  .env.example  .gitignore  .lisa-layout.kdl  .lisa.toml  CLAUDE.md  Cargo.toml  README.md  docker-compose.yml  justfile
.cargo/: config.toml
.github/workflows/: ci.yml  deploy.yml
apps/viewer/: Cargo.toml  index.html
apps/viewer/assets/models/: test_scene.glb
apps/viewer/src/: bridge.rs  camera.rs  lighting.rs  main.rs  picking.rs  scene.rs
assets/scans/: README.md
assets/scans/samples/: Scan at 09.23-report.json  powell-market-downsampled.ply
baml_client/: baml_source_map.rs
baml_client/functions/: async_client.rs  sync_client.rs
baml_client/stream_types/: classes.rs  mod.rs
baml_client/type_builder/: classes.rs  mod.rs
baml_client/types/: classes.rs  mod.rs
baml_src/: analyze.baml  classify.baml  clients.baml  generators.baml  planter.baml  proposal.baml  reconcile.baml
crates/plantastic-api/: Cargo.toml
crates/plantastic-api/src/: error.rs  extract.rs  lib.rs  main.rs  s3.rs  scan_job.rs  state.rs
crates/plantastic-api/src/routes/: health.rs  materials.rs  mod.rs  projects.rs  proposals.rs  quotes.rs  scan.rs  scenes.rs  shared.rs  tiers.rs  zones.rs
crates/plantastic-api/tests/: crud_test.rs  health_test.rs  scan_test.rs
crates/plantastic-api/tests/common/: mod.rs
crates/pt-analyzer/: Cargo.toml
crates/pt-analyzer/src/: analyzer.rs  claude_cli.rs  error.rs  lib.rs  mock.rs
crates/pt-climate/: Cargo.toml
crates/pt-climate/src/: frost.rs  growing_season.rs  hardiness.rs  lib.rs  sunset.rs  types.rs
crates/pt-features/: Cargo.toml
crates/pt-features/src/: classifier.rs  claude_cli.rs  error.rs  lib.rs  mock.rs
crates/pt-features/tests/: classify.rs
crates/pt-geo/: Cargo.toml
crates/pt-geo/src/: area.rs  boolean.rs  lib.rs  perimeter.rs  simplify.rs  volume.rs
crates/pt-materials/: Cargo.toml
crates/pt-materials/src/: builder.rs  lib.rs  types.rs
crates/pt-planter/: Cargo.toml
crates/pt-planter/src/: claude_cli.rs  compute.rs  error.rs  estimator.rs  lib.rs  mock.rs
crates/pt-planter/tests/: estimate.rs
crates/pt-project/: Cargo.toml
crates/pt-project/src/: error.rs  geojson_conv.rs  lib.rs  project.rs  serde_helpers.rs  types.rs
crates/pt-proposal/: Cargo.toml
crates/pt-proposal/examples/: regenerate_fixture.rs  test_proposal.rs
crates/pt-proposal/src/: claude_cli.rs  error.rs  generator.rs  lib.rs  mock.rs  render.rs
crates/pt-proposal/src/fixtures/: README.md  sample_input.json  sample_output.json
crates/pt-proposal/templates/: proposal.typ
crates/pt-proposal/tests/: generator_test.rs  render_test.rs
crates/pt-quote/: Cargo.toml
crates/pt-quote/src/: engine.rs  error.rs  lib.rs  types.rs
crates/pt-reconciler/: Cargo.toml
crates/pt-reconciler/src/: claude_cli.rs  convert.rs  error.rs  lib.rs  mock.rs  reconciler.rs
crates/pt-repo/: Cargo.toml
crates/pt-repo/src/: convert.rs  error.rs  lib.rs  material.rs  pool.rs  project.rs  tenant.rs  tier_assignment.rs  zone.rs
crates/pt-repo/tests/: material_test.rs  pool_test.rs  project_test.rs  round_trip_test.rs  tier_test.rs  zone_test.rs
crates/pt-satellite/: Cargo.toml
crates/pt-satellite/src/: builder.rs  embedded.rs  error.rs  lib.rs  serde_helpers.rs  traits.rs  types.rs
crates/pt-scan/: Cargo.toml
crates/pt-scan/examples/: debug_segmentation.rs  process_sample.rs  scan_to_quote.rs
crates/pt-scan/src/: annotate.rs  cluster.rs  eigenvalue.rs  error.rs  export.rs  feature.rs  filter.rs  gap.rs  lib.rs  logging.rs  mesh.rs  parser.rs  pipeline.rs  ransac.rs  report.rs  types.rs
crates/pt-scan/tests/: integration.rs
crates/pt-scene/: Cargo.toml
crates/pt-scene/src/: error.rs  glb.rs  lib.rs  mesh.rs  scene.rs
crates/pt-solar/: Cargo.toml
crates/pt-solar/src/: classification.rs  grid.rs  lib.rs  position.rs  seasonal.rs  sun_hours.rs  types.rs
crates/pt-test-utils/: Cargo.toml
crates/pt-test-utils/src/: lib.rs
docs/: specification.md  testing-strategy.md
docs/active/epics/: E-010-polish-dimension.md  E-011-low-hanging-fruit.md  E-012-ux-polish-sprint.md  E-013-proposal-and-scene-export.md  E-014-lidar-feature-detection.md  E-015-scenario-fixes.md  E-016-ml-feedback-loops.md  E-017-3d-plan-from-ply.md  E-018-quote-comparison-in-viewer.md  E-019-dxf-export.md
docs/active/stories/: S-022-polish-rating-framework.md  S-023-baseline-polish-audit.md  S-024-material-callouts.md  S-025-infrastructure-validation.md  S-026-core-ux-polish.md  S-027-responsive-tablet.md  S-028-visual-consistency.md  S-029-baml-proposal-narrative.md  S-030-typst-pdf-rendering.md  S-031-scene-generation.md  S-032-scan-processing-cli.md  S-033-geometric-feature-clustering.md  S-034-baml-feature-classification.md  S-035-multimodal-plan-view.md  S-036-planter-estimation.md  S-037-playwright-e2e.md  S-038-scenario-fixes.md  S-039-correction-capture-ui.md  S-040-classification-event-logging.md  S-041-zone-placement-telemetry.md  S-042-design-session-traces.md  S-043-scan-terrain-in-viewer.md  S-044-zone-overlay-on-scan.md  (+6 more)
infra/: package.json  sst.config.ts
migrations/: 001-create-tenants.sql  002-create-projects.down.sql  002-create-projects.sql  003-create-zones.down.sql  003-create-zones.sql  004-create-materials.down.sql  004-create-materials.sql  005-create-tier-assignments.down.sql  005-create-tier-assignments.sql  006-create-plants.down.sql  006-create-plants.sql
scripts/: build-lambda.sh  docker-init-db.sh  migrate.sh  validate-lambda-neon.sh  verify-deploy.sh  verify-neon.sh
tests/scenarios/: Cargo.toml
tests/scenarios/src/: api_helpers.rs  main.rs  progress.rs  registry.rs  report.rs
tests/scenarios/src/suites/: crew_handoff.rs  design.rs  infrastructure.rs  mod.rs  quoting.rs  site_assessment.rs
web/: .gitignore  .prettierignore  eslint.config.js  package.json  playwright.config.ts  pnpm-lock.yaml  vite.config.ts
web/e2e/: scan-viewer.spec.ts  smoke.spec.ts  viewer.spec.ts
web/src/: app.css  app.d.ts
worker/: package.json  pnpm-lock.yaml  tsconfig.json  wrangler.toml
worker/src/: index.test.ts  index.ts
(+662 files in other folders)
