[package]
name = "plantastic-viewer"
version = "0.1.0"
edition = "2021"
publish = false

[dependencies]
bevy = { version = "0.18", default-features = false, features = [
    "bevy_asset",
    "bevy_camera",
    "bevy_color",
    "bevy_core_pipeline",
    "bevy_gltf",
    "bevy_image",
    "bevy_log",
    "bevy_mesh",
    "bevy_pbr",
    "bevy_picking",
    "bevy_render",
    "bevy_scene",
    "bevy_window",
    "bevy_winit",
    "mouse",
    "touch",
    "webgl2",
] }
bevy_panorbit_camera = "0.34"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
wasm-bindgen = "0.2"
js-sys = "0.3"

[dependencies.web-sys]
version = "0.3"
features = ["Window", "MessageEvent", "EventTarget", "console"]

[profile.release]
opt-level = "z"
lto = true
codegen-units = 1
strip = true
