[package]
name = "pt-analyzer"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
baml.workspace = true
base64 = "0.22"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dependencies.pt-scan]
path = "../pt-scan"

[dev-dependencies]
pt-test-utils = { path = "../pt-test-utils" }

[lints]
workspace = true
