[package]
name = "pt-project"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
geo.workspace = true
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
pt-materials = { path = "../pt-materials" }
pt-geo = { path = "../pt-geo" }

[lints]
workspace = true
