[package]
name = "pt-proposal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
baml.workspace = true
serde.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dev-dependencies]
pt-test-utils = { path = "../pt-test-utils" }
serde_json.workspace = true

[[example]]
name = "test_proposal"
required-features = []

[lints]
workspace = true
