[package]
name = "pt-proposal"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
baml.workspace = true
rust_decimal.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true
typst.workspace = true
typst-as-lib.workspace = true
typst-pdf.workspace = true

[dependencies.pt-materials]
path = "../pt-materials"

[dependencies.pt-quote]
path = "../pt-quote"

[dev-dependencies]
pt-project = { path = "../pt-project" }
pt-test-utils = { path = "../pt-test-utils" }

[[example]]
name = "test_proposal"
required-features = []

[lints]
workspace = true
