[package]
name = "pt-reconciler"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
async-trait.workspace = true
baml.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
tokio.workspace = true

[dependencies.pt-satellite]
path = "../pt-satellite"

[dev-dependencies]
geo = { workspace = true }
pt-solar = { path = "../pt-solar" }
pt-test-utils = { path = "../pt-test-utils" }

[lints]
workspace = true
