[package]
name = "pt-repo"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
sqlx.workspace = true
serde.workspace = true
serde_json.workspace = true
uuid.workspace = true
chrono.workspace = true
rust_decimal.workspace = true
geojson.workspace = true
geo.workspace = true
thiserror.workspace = true
tokio.workspace = true
tracing.workspace = true
pt-project = { path = "../pt-project" }
pt-materials = { path = "../pt-materials" }

[features]
integration = []

[dev-dependencies]
sqlx = { workspace = true }
pt-test-utils = { path = "../pt-test-utils" }

[lints]
workspace = true
