[package]
name = "pt-satellite"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
chrono.workspace = true
geo.workspace = true
geojson.workspace = true
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true
pt-solar = { path = "../pt-solar" }

[dev-dependencies]
approx = "0.5"
pt-test-utils = { path = "../pt-test-utils" }

[lints]
workspace = true
