[package]
name = "pt-scan"
version = "0.1.0"
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
ab_glyph = "0.2"
delaunator = "1"
image = { version = "0.25", default-features = false, features = ["png"] }
imageproc = "0.25"
indexmap = "2"
hdbscan.workspace = true
kiddo = "5"
meshopt = "0.4"
nalgebra = "0.34"
rayon.workspace = true
ply-rs-bw = "3"
rand = "0.10"
serde.workspace = true
serde_json.workspace = true
thiserror.workspace = true

[dev-dependencies]
approx = "0.5"
pt-features = { path = "../pt-features" }
pt-test-utils = { path = "../pt-test-utils" }
tokio = { version = "1", features = ["rt", "macros"] }

[lints]
workspace = true
